2012-12-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (enhanced_recursion):  Depending on the terminal type and
	the current encoding, improper enhanced text syntax could cause anything
	from garbage text to a segfault:
	  set termopt enhanced; 
	  set label "~"; plot [0:1][0:1] '+' using 1:1:("~^") with labels
	Bugfix

2012-12-16  Ethan A Merritt  <merritt@u.washington.edu>

	* demo/key.dem src/graph3d.c (boundary3d do_3d_key_layout)
	src/graphics.c (boundary do_key_layout do_key_bounds draw_key):
	Refactor code the key box layout code to repair several problems.
	- left/right/center was not honored for an explicit key position
	- incorrect key placement due to subscript or superscript in key title
	- text spacing should be based on key font, not on the default font
	- vertical centering of text in key samples was incorrect
	Remaining problems:
	- postscript terminal does incorrect vertical centering (vshift)
	- maxcols is never checked in the splot key layout code
	Bug #3556892  and other issues visible in key.dem

	* term/post.trm (set_font): Quick fix to redefine vshift every time the
	current font size changes. A better fix would query the font internally.

	* term/svg.trm (set_font): Similar fix for svg font metrics.

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_text):  And for wxt.

2012-12-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c:  If a data column requested by name is not found,
	treat it as undefined (DF_UNDEFINED) rather than terminating data input
	with int_error().  This makes the treatment of named columns more like
	that of numbered columns.
	Bug #3595672

	* src/save.c src/set.c src/show.c:  The hypertext flag on labels was
	being ignored by save and show commands.  Setting the flag worked only
	for certain orders of `set` options.
	Bugfix

	* src/datafile.c src/graph3d.h src/graphics.h src/plot2d.c src/plot3d.c
	demo/piecewise.dem docs/gnuplot.doc: